fix(Brewfile): missing apps

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -51,9 +51,12 @@ brew 'tintin'
 brew 'tlrc'
 brew 'trash-cli'
 brew 'yt-dlp'
+brew 'jq'
+brew 'yq'
 
 ## Dev & Ops Tooling
 
+brew 'asdf'
 brew 'csvlens'
 brew 'direnv'
 brew 'dive'
@@ -66,7 +69,6 @@ brew 'git-xargs'
 brew 'gnupg'
 brew 'go'
 brew 'golangci-lint'
-brew 'jq'
 brew 'just'
 brew 'libpq'
 brew 'miller'
