feat: bat just saved me, bring it back

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -5,6 +5,7 @@ tap 'homebrew/services'
 ## Upgrades & Overlays
 
 brew 'bat'
+brew 'bat-extras'
 brew 'btop'
 brew 'curl'
 brew 'eza'
@@ -63,6 +64,7 @@ brew 'dive'
 brew 'entr'
 brew 'gh'
 brew 'git'
+brew 'git-delta'
 brew 'git-lfs'
 brew 'git-standup'
 brew 'git-xargs'
