feat(Brewfile): move to curlie

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -8,11 +8,11 @@ brew 'bat'
 brew 'bat-extras'
 brew 'btop'
 brew 'curl'
+brew 'curlie'
 brew 'eza'
 brew 'fd'
 brew 'fzf'
 brew 'gawk'
-brew 'httpie'
 brew 'mosh'
 brew 'ncdu'
 brew 'neovim'
