feat: new tf tooling & fx json viewer

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -8,7 +8,6 @@ brew 'bat'
 brew 'bat-extras'
 brew 'btop'
 brew 'curl'
-brew 'curlie'
 brew 'eza'
 brew 'fd'
 brew 'fzf'
@@ -22,7 +21,7 @@ brew 'rsync'
 brew 'tmux'
 brew 'watch'
 brew 'wget'
-brew 'yazi'
+brew 'whois'
 brew 'zoxide'
 
 ## Deps for other apps
@@ -46,18 +45,25 @@ brew 'marp-cli' # slides
 brew 'media-info'
 brew 'msmtp'
 brew 'qpdf' # moar pdf
-brew 'streamlink'
 brew 'syncthing'
 brew 'tintin'
 brew 'tlrc'
+brew 'yazi'
 brew 'yt-dlp'
+
+## File Manglers
+
+brew 'csvlens'
+brew 'fx'
 brew 'jq'
+brew 'miller'
+brew 'qrencode'
 brew 'yq'
 
 ## Dev & Ops Tooling
 
 brew 'asdf'
-brew 'csvlens'
+brew 'curlie'
 brew 'direnv'
 brew 'dive'
 brew 'entr'
@@ -72,13 +78,10 @@ brew 'go'
 brew 'golangci-lint'
 brew 'just'
 brew 'libpq'
-brew 'miller'
 brew 'nmap'
 brew 'overmind'
-brew 'pipx'
-brew 'qrencode'
+brew 'tf-summarize'
 brew 'tflint'
-brew 'whois'
 brew 'wireguard-tools'
 
 tap 'goreleaser/tap'
