--- a/home/.config/git/config
+++ b/home/.config/git/config
@@ -50,9 +50,10 @@
 	# Shell commands
 	bb = "!git-better-branch"
 	open = "!git_open"
+	upbranch = "!f() { git rev-parse --abbrev-ref origin/HEAD | xargs basename; }; f"
 	pr = "!f() { git fetch origin pull/$1/head:pr-$1 && git switch pr-$1; }; f"
 	prs = "!prsbad"
-	sm = "!f() { git switch main && git fetch --prune && git pull; }; f"
+	sm = "!f() { git switch $(git upbranch) && git fetch --prune && git pull; }; f"
 	wipe = "!f() { git branch | grep -vE '( main$|master$|^\\*)' | xargs git branch -D; }; f"
 
 # include for work
