chore(brew): cask goreleaser

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -87,7 +87,7 @@ brew 'xh' # httpie replacement
 cask '1password-cli'
 
 tap 'goreleaser/tap'
-brew 'goreleaser/tap/goreleaser'
+cask 'goreleaser/tap/goreleaser'
 
 tap 'jesseduffield/lazygit'
 brew 'jesseduffield/lazygit/lazygit'
