--- a/home/.config/yazi/keymap.toml
+++ b/home/.config/yazi/keymap.toml
@@ -1,51 +1,20 @@
-## jump to char
-[[mgr.prepend_keymap]]
-on = "f"
-run = "plugin jump-to-char"
-desc = "Jump to char"
+[mgr]
+prepend_keymap = [
+  # Switch these two
+  { on = "Z", run = "plugin fzf", desc = "Jump to a file/directory via fzf" },
+  { on = "z", run = "plugin zoxide", desc = "Jump to a directory via zoxide" },
 
-## relative Motions
-[[mgr.prepend_keymap]]
-on = ["1"]
-run = "plugin relative-motions 1"
-desc = "Move in relative steps"
+  ## jump to char
+  { on = "f", run = "plugin jump-to-char", desc = "Jump to char" },
 
-[[mgr.prepend_keymap]]
-on = ["2"]
-run = "plugin relative-motions 2"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["3"]
-run = "plugin relative-motions 3"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["4"]
-run = "plugin relative-motions 4"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["5"]
-run = "plugin relative-motions 5"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["6"]
-run = "plugin relative-motions 6"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["7"]
-run = "plugin relative-motions 7"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["8"]
-run = "plugin relative-motions 8"
-desc = "Move in relative steps"
-
-[[mgr.prepend_keymap]]
-on = ["9"]
-run = "plugin relative-motions 9"
-desc = "Move in relative steps"
+  ## Relative Motions
+  { on = "1", run = "plugin relative-motions 1", desc = "Move in relative steps" },
+  { on = "2", run = "plugin relative-motions 2", desc = "Move in relative steps" },
+  { on = "3", run = "plugin relative-motions 3", desc = "Move in relative steps" },
+  { on = "4", run = "plugin relative-motions 4", desc = "Move in relative steps" },
+  { on = "5", run = "plugin relative-motions 5", desc = "Move in relative steps" },
+  { on = "6", run = "plugin relative-motions 6", desc = "Move in relative steps" },
+  { on = "7", run = "plugin relative-motions 7", desc = "Move in relative steps" },
+  { on = "8", run = "plugin relative-motions 8", desc = "Move in relative steps" },
+  { on = "9", run = "plugin relative-motions 9", desc = "Move in relative steps" },
+]
