feat: remove rarely used yazi plugins

--- a/home/.config/yazi/package.toml
+++ b/home/.config/yazi/package.toml
@@ -1,12 +1,5 @@
-[[plugin.deps]]
-use = "dedukun/relative-motions"
-rev = "9d26460"
-hash = "6c0568cfa966a5d4ac496c926975a613"
-
-[[plugin.deps]]
-use = "yazi-rs/plugins:jump-to-char"
-rev = "2ad42fa"
-hash = "d2f04875bbd4ed3dd5696e8c4b094fde"
+[plugin]
+deps = []
 
 [[flavor.deps]]
 use = "bennyyip/gruvbox-dark"
