feat: add nvim zen mode support

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -49,6 +49,7 @@ set -sg focus-events on
 set -a terminal-features 'foot:RGB'
 set -a terminal-features '*256color:RGB'
 set -a terminal-features 'xterm-kitty:RGB'
+set -g allow-passthrough on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
