--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -11,10 +11,10 @@
   "modules-left": [
     "clock",
     "tray",
-    "sway/workspaces"
+    "niri/workspaces"
   ],
   "modules-center": [
-    "sway/window"
+    "niri/window"
   ],
   "modules-right": [
     "network",
@@ -23,11 +23,11 @@
     "memory",
     "wireplumber"
   ],
-  "sway/window": {
+  "niri/window": {
     "format": "{}",
     "max-length": 40
   },
-  "sway/workspaces": {
+  "niri/workspaces": {
     "disable-scroll": true,
     "all-outputs": true,
     "on-click": "activate",
@@ -80,8 +80,8 @@
   },
   "wireplumber#microphone": {
     "format": "{format_source}",
-    "format-source": " {volume}%",
-    "format-source-muted": " Muted",
+    "format-source": "󰍬 {volume}%",
+    "format-source-muted": "󰍭 Muted",
     "on-click": "pamixer --default-source -t",
     "on-scroll-up": "pamixer --default-source -i 5",
     "on-scroll-down": "pamixer --default-source -d 5",
@@ -107,9 +107,9 @@
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
     "format-wifi": "  {signalStrength}%",
-    "format-ethernet": "{ipaddr}/{cidr} ",
-    "tooltip-format": "{essid} - {ifname} via {gwaddr} ",
-    "format-linked": "{ifname} (No IP) ",
+    "format-ethernet": "{ipaddr}/{cidr} 󰊗",
+    "tooltip-format": "{essid} - {ifname} via {gwaddr} 󰊗",
+    "format-linked": "{ifname} (No IP) 󰊗",
     "format-disconnected": "NONE ⚠",
     "format-alt": "{ifname}:{essid} {ipaddr}/{cidr}",
     "on-click-right": "~/.config/rofi/bin/network"
