fix(linux): I am back on a WM and it's a configuration blood bath
these need WORK

--- a/home/.config/swaylock/config
+++ b/home/.config/swaylock/config
@@ -1,5 +1,3 @@
 ignore-empty-password
 show-failed-attempts
-image=~/Sync/Images/Desktops/arch-monokay.png
-image=HDMI-A-1:~/Sync/Images/Desktops/WebbyRelax.png
-image=HDMI-A-2:~/Sync/Images/Desktops/WebbyMoon.png
+image=~/Pictures/Chillhop 2025 Fall/Chillhop Music - Chillhop Essentials Fall 2025 - Fall Essentials_Island Evening No Rain_Desktop.jpg
