--- a/home/.config/mako/config
+++ b/home/.config/mako/config
@@ -16,6 +16,8 @@ ignore-timeout=1
 font=Hack 12
 progress-color=over #313244
 
+output=DP-2
+
 [urgency=low]
 border-color=#e0def4
 
@@ -30,6 +32,5 @@ default-timeout=0
 default-timeout=2000
 group-by=category
 
-[desktop-entry=com.plexamp.Plexamp]
-default-timeout=2000
-group-by=category
+[mode=do-not-disturb]
+invisible=1
