--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -2,59 +2,35 @@
 {
   "layer": "top",
   "position": "top",
-  "mod": "dock",
+  "mode": "dock",
   "exclusive": true,
   "passthrough": false,
   "gtk-layer-shell": true,
   "height": 50,
-  // "spacing": 4,
+  "reload_style_on_change": true,
   "modules-left": [
-    "network",
     "temperature",
     "cpu",
     "memory",
     "wireplumber",
+    "systemd-failed-units",
     "niri/workspaces"
   ],
-  "modules-center": [
-    "niri/window"
-  ],
-  "modules-right": [
-    "mpris",
-    "tray",
-    "clock"
-  ],
-  "niri/window": {
-    "format": "{}",
-    "max-length": 40
+  "temperature": {
+    "thermal-zone": 1,
+    "format": "TEMP {temperatureC}°C",
+    "critical-threshold": 80,
+    "format-critical": "{temperatureC}°C "
   },
-  "niri/workspaces": {
-    "disable-scroll": true,
-    "all-outputs": true,
-    "on-click": "activate",
-    "format": "{icon}",
-    "format-icons": {
-      "1": "いち",
-      "2": "に",
-      "3": "さん",
-      "4": "よん",
-      "5": "ご",
-      "6": "ろく",
-      "7": "なな",
-      "8": "はち",
-      "9": "きゅう",
-      "10": "じゅう"
-    }
+  "cpu": {
+    "format": "CPU {usage}%"
   },
-  "tray": {
-    "icon-size": 18,
-    "spacing": 10
-  },
-  "clock": {
-    "format": "{%a, %b %d:%R}",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    // "format": "{: %I:%M %p   %a, %b %e}",
-    // "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+  "memory": {
+    "interval": 30,
+    "format": "RAM {}%",
+    "max-length": 10,
+    "tooltip": true,
+    "tooltip-format": "Memory - {used:0.1f}GB used"
   },
   "wireplumber": {
     "format": "{icon}  {volume}",
@@ -88,41 +64,22 @@
     "on-scroll-down": "pamixer --default-source -d 5",
     "scroll-step": 5
   },
-  "temperature": {
-    "thermal-zone": 1,
-    "format": "TEMP {temperatureC}°C",
-    "critical-threshold": 80,
-    "format-critical": "{temperatureC}°C "
-  },
-  "cpu": {
-    "format": "CPU {usage}%"
-  },
-  "memory": {
-    "interval": 30,
-    "format": "RAM {}%",
-    "max-length": 10,
-    "tooltip": true,
-    "tooltip-format": "Memory - {used:0.1f}GB used",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-  },
-  "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "  {signalStrength}%",
-    "format-ethernet": "{ipaddr}/{cidr} ",
-    "tooltip-format": "{essid} - {ifname} via {gwaddr} ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "NONE ⚠",
-    "format-alt": "{ifname}:{essid} {ipaddr}/{cidr}",
-    "on-click-right": "~/.config/rofi/bin/network"
-  },
-  "bluetooth": {
-    "format": " {status}",
-    "format-disabled": "", // an empty format will hide the module
-    "format-connected": " {num_connections}",
-    "tooltip-format": "{device_alias}",
-    "tooltip-format-connected": " {device_enumerate}",
-    "tooltip-format-enumerate-connected": "{device_alias}",
-    "on-click-right": "blueman-manager"
+  "niri/workspaces": {
+    "disable-scroll": true,
+    "on-click": "activate",
+    "format": "{icon}",
+    "format-icons": {
+      "1": "いち",
+      "2": "に",
+      "3": "さん",
+      "4": "よん",
+      "5": "ご",
+      "6": "ろく",
+      "7": "なな",
+      "8": "はち",
+      "9": "きゅう",
+      "10": "じゅう"
+    }
   },
   "systemd-failed-units": {
     "hide-on-ok": false, // Do not hide if there is zero failed units.
@@ -131,6 +88,22 @@
     "system": true,
     "user": true,
     "format-alt": "system: {nr_failed_system}\nuser: {nr_failed_user}"
+  },
+  "modules-center": [
+    "niri/window"
+  ],
+  "niri/window": {
+    "format": "{}",
+    "max-length": 69
+  },
+  "modules-right": [
+    "tray",
+    "mpris",
+    "clock"
+  ],
+  "tray": {
+    "icon-size": 18,
+    "spacing": 10
   },
   "mpris": {
     "format": "{player_icon} {player}",
@@ -144,5 +117,9 @@
     "status-icons": {
       "paused": "⏸"
     }
+  },
+  "clock": {
+    "format": "{:%a, %b %d %H:%M} ",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
   }
 }
