feat(niri): add back startups, no caps, obsidian correct

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,11 +1,10 @@
 exit-on-keyboard-focus-loss = no
 fields=name,generic,comment,categories,filename,keywords
 font=Noto Serif:size=20
-fuzzy=yes
 icon-theme=Mint-Y-Yaru
 icons-enabled=yes
 show-actions=yes
-terminal=foot -e
+terminal=ghostty -e
 width=20
 
 
