--- a/home/.config/mako/config
+++ b/home/.config/mako/config
@@ -1,22 +1,23 @@
 sort=-time
 layer=overlay
-background-color=#1e1e2e
 width=330
 margin=20,20,0
 padding=7
 height=110
 border-size=2
-border-color=#31748f
-text-color=#e0def4
 border-radius=10
 icons=1
 max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
 font=Hack 12
-progress-color=over #313244
 
 output=DP-2
+
+background-color=#26233a
+text-color=#e0def4
+border-color=#524f67
+progress-color=over #31748f
 
 [urgency=low]
 border-color=#e0def4
