feat(fuzzel): rose pine it

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,18 +1,19 @@
 exit-on-keyboard-focus-loss = no
 fields=name,generic,comment,categories,filename,keywords
 font=Noto Serif:size=20
-icon-theme=Mint-Y-Yaru
+icon-theme=rose-pine
 icons-enabled=yes
 show-actions=yes
 terminal=ghostty -e
 width=20
 
 
+# RosePine Dawn
 [colors]
-background=eff1f5dd
-text=4c4f69ff
-match=d20f39ff
-selection=acb0beff
-selection-match=d20f39ff
-selection-text=4c4f69ff
-border=7287fdff
+background=faf4eddd
+text=575279ff
+match=b4637aff
+selection=f2e9e1ff
+selection-match=b4637aff
+selection-text=575279ff
+border=56949fff
