style(fuzzel): clean up fuzzel more

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,12 +1,15 @@
-exit-on-keyboard-focus-loss = no
-fields=name,generic,comment,categories,filename,keywords
-font=Noto Serif:size=20
-icon-theme=rose-pine
-icons-enabled=yes
-show-actions=yes
-terminal=ghostty -e
+font=Noto Serif:size=21
+use-bold=true
 width=20
 
+match-mode=fuzzy
+
+icons-enabled=yes
+icon-theme=rose-pine
+
+terminal=ghostty -e
+
+output=DP-2
 
 # RosePine Dawn
 [colors]
@@ -17,3 +20,7 @@ selection=f2e9e1ff
 selection-match=b4637aff
 selection-text=575279ff
 border=56949fff
+
+[border]
+width=5
+radius=18
