fix(waybar): ignore firefox in media

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -90,8 +90,10 @@
     "status-icons": {
       "playing": "",
       "paused": ""
-    }
-    // "ignored-players": ["firefox"]
+    },
+    "ignored-players": [
+      "firefox"
+    ]
   },
   "clock": {
     "format": "{:%a, %b %d %H:%M} ",
